removed all color related things and put them in colors.css, also added letter spacing and font weight for button text and fixed variable namings

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -5,19 +5,19 @@
 }
 
 :root {
+    --button-font-size: 20px;
     --feature-link-size: 15px;
     --font-roboto: 'Roboto', sans-serif;
     --feature-text-size: 17px;
     --feature-title-size: 20px;
     --subheader-font-size: 30px;
+    --title-font-size: 20px;
 }
 
 /* Navigation Bar */
 
-.title h1,
-.title i {
-    color: white;
-    font-size: var(--navbar-icon-size);
+.title h1 {
+    font-size: var(--title-font-size);
     margin-left: 5px;
 }
 
@@ -36,18 +36,15 @@
 }
 
 .hero-text-container h2{
-    color: var(--header-and-links);
     font-size: 30px;
     margin: 0;
 }
 
 .hero-text-container h3 {
-    color: var(--subheader-color);
     font-size: var(--subheader-font-size);
 }
 
 .hero-text-container h4 {
-    color: var(--text-color);
     font-size: 18px;
     line-height: 1.5;
     margin: 10px 10px;
@@ -56,8 +53,10 @@
 /* Button Section */
 
 .button-container button {
-    font-family: Roboto, sans-serif;
-    font-size: 30px;
+    font-family: var(--font-roboto);
+    font-size: var(--button-font-size);
+    font-weight: 400;
+    letter-spacing: 1px;
 }
 
 /* Features Section */
